--- a/package.json
+++ b/package.json
@@ -3,24 +3,65 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node scripts/copy-pdf-worker.js && next dev",
+    "dev:tunnel": "ts-node scripts/start-with-ngrok.ts",
+    "dev:genaijake": "ts-node scripts/start-with-ngrok.ts --custom-domain",
+    "dev:heart": "ts-node scripts/start-with-ngrok.ts --show-signature",
+    "build": "node scripts/copy-pdf-worker.js && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-bland-call": "ts-node --project scripts/tsconfig.json scripts/test-bland-call.ts",
+    "test-nova": "ts-node --project scripts/tsconfig.json scripts/test-nova.ts",
+    "test-webhook": "ts-node --project scripts/tsconfig.json scripts/test-webhook.ts",
+    "test-webhook-with-server": "concurrently \"npm run dev\" \"wait-on tcp:3000 && npm run test-webhook\"",
+    "postinstall": "node scripts/copy-pdf-worker.js"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.525.0",
+    "@aws-sdk/client-dynamodb": "^3.726.0",
+    "@aws-sdk/credential-provider-node": "^3.525.0",
+    "@aws-sdk/lib-dynamodb": "^3.726.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.469.0",
+    "next": "^14.2.23",
+    "ngrok": "^5.0.0-beta.2",
+    "path-browserify": "^1.0.1",
+    "pdfjs-dist": "^4.0.379",
+    "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.16"
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.48.2",
+    "stream-browserify": "^3.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^20.17.12",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^9.1.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16",
+    "node-fetch": "^2.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "wait-on": "^8.0.2"
   }
 }
