--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.525.0",
     "@aws-sdk/client-dynamodb": "^3.726.0",
+    "@aws-sdk/client-secrets-manager": "^3.731.1",
     "@aws-sdk/credential-provider-node": "^3.525.0",
     "@aws-sdk/lib-dynamodb": "^3.726.0",
     "@hookform/resolvers": "^3.3.2",
